<resources>
    <string name="app_name">JoggingCoach</string>
    <string name="greetings">Welcome to JoggingCoach</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="start">Start</string>
    <string name="createUser">CREATE NEW USER</string>
    <string name="title_activity_create_avatar">JoggingCoach</string>
    <string name="title_activity_training_mode">JoggingCoach</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="gearConnection">Connect with Samsung Gear</string>
    <string name="title_activity_basic">JoggingCoach</string>
    <string name="startTraining">Start Training</string>
    <string name="showDiary">Trainingsdiary</string>
    <string name="title_activity_raining_diary">rainingDiaryActivity</string>
    <string name="title_activity_training_diary">TrainingDiaryActivity</string>
    <string name="login">Login</string>
    <string name="startIntervalTraining">Start Interval-Training</string>
    <string name="title_activity_interval_mode">IntervalModeActivity</string>
    <string name="logout">Logout</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="interval_title">Choose Interval Conditions</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="distance">Distance</string>
    <string name="calorie">Calorie</string>
    <string name="speedA">Average Speed</string>
    <string name="diary">Training Diary</string>
    <string name="chooseTrainingMode">Choose a Training-Mode</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_ResultDiary">Training Stoped</string>
    <string name="message_ResultDiary">Do you want to store your results?</string>
    <string name="save_result">Your training result has been stored</string>
    <string name="exit">Exit</string>
</resources>
