<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.haraldbernhard.joggingcoachandroid.MenuActivity">

    <include layout="@layout/my_toolbar"
        android:id="@+id/my_toolbar"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">

        <TableRow
            android:layout_marginTop="100dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chooseTrainingMode"
                android:id="@+id/textViewGreeting"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="50dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startTraining"
                android:id="@+id/buttonStartNewTraining"
                android:onClick="startTrainingSession"
                android:layout_centerHorizontal="true" />
        </TableRow>
        <TableRow
            android:layout_marginTop="50dp" >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startIntervalTraining"
                android:id="@+id/buttonStartIntervalTraining"
                android:onClick="startIntervalTraining"
                android:layout_centerHorizontal="true"
                />
        </TableRow>
        <TableRow
            android:layout_marginTop="50dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showDiary"
                android:id="@+id/buttonDiary"
                android:onClick="startDiary"
                android:layout_centerHorizontal="true"
                />
        </TableRow>
    </TableLayout>
</RelativeLayout>
